# multimodal_stockprice_prediction

./: .gitignore  FINDINGS.md  LICENSE  README.md  api.env  pyproject.toml  requirements.txt
code/baseline/: baseline_LLM_sentiment_models.ipynb  baseline_lstm.ipynb  baseline_mlp.ipynb  baseline_transformer_models.ipynb
code/experiments/: news_headline_embeddings.py  test_retrieving_price_and_text_data.ipynb  test_text_data_processing.ipynb
data/benchmark_data/: Sentences_66Agree.csv
data/clean/: baseline_transformed_dataset_LSTM.csv  baseline_transformed_dataset_MLP.csv  baseline_transformed_dataset_RF.csv  dataset_transformed.csv  dataset_transformed_for_LSTM.csv  sentiment_analysis_headlines_AAPL.csv  transformed_df_for_RF.csv
data/cleaned/: Apple_Inc_text_data
data/model_results/: baseline_lstm_AMZN_errors_AMZN.csv  baseline_lstm_CRM_errors_CRM.csv  baseline_lstm_IBM_errors_IBM.csv  baseline_lstm_MSFT_errors_MSFT.csv  baseline_lstm_NVDA_errors_NVDA.csv  baseline_lstm_errors_AAPL.csv  baseline_lstm_errors_AMZN.csv  baseline_lstm_errors_MSFT.csv  baseline_lstm_errors_^DJI.csv  concat_attention_lag1_llm_sentiment_headline_errors_AAPL.csv  concat_attention_lag3_llm_sentiment_headline_errors_AAPL.csv  concat_deberta_sentiment_weighted_headline_errors_AAPL.csv  concat_deberta_sentiment_weighted_headline_errors_AMZN.csv  concat_deberta_sentiment_weighted_headline_errors_IBM.csv  concat_deberta_sentiment_weighted_headline_errors_MSFT.csv  concat_distil_sentiment_weighted_headline_errors_AAPL.csv  concat_distil_sentiment_weighted_headline_errors_AMZN.csv  (+40 more)
(+1570 files in other folders)
