[tool.poetry]
name = "multimodal-stockprice-prediction"
version = "0.1.0"
description = ""
authors = ["xavsant <xavierboons2021@economics.smu.edu.sg>"]
license = "BSD 3-Clause License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "2.0.2"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
tensorflow = "^2.18.0"
keras = "^3.8.0"
statsmodels = "^0.14.4"
notebook = "^7.3.2"
yfinance = "^0.2.52"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
